update team page with mark's profile pic

--- a/phish_buster/templates/phish_buster/team.html
+++ b/phish_buster/templates/phish_buster/team.html
@@ -194,7 +194,7 @@
     <!-- Member 4: Mark (Layout Right) -->
     <section class="team-member-item layout-right">
         <div class="member-details">
-            <div class="image-placeholder" style="background-image: url('{% static 'images/team/mark.jpg' %}')"></div>
+            <div class="image-placeholder" style="background-image: url('{% static 'images/team/mark.webp' %}')"></div>
             <h2 class="member-name">MARK</h2>
             <p class="member-role">Design / Content</p>
             <div class="member-links">
