--- a/phish_buster/templates/phish_buster/quiz.html
+++ b/phish_buster/templates/phish_buster/quiz.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 <!-- Halloween Themed Title and Intro -->
@@ -25,6 +26,8 @@
     <div id="quiz-timer" data-timer-value="{{ timer_value }}"></div>
     <div>Q<span>{{ question_number }}/{{ total_questions }}</span></div>
 </div>
+
+<div id="quiz-config" data-audio-base="{% static 'audio' %}"></div>
 
 <div class="email-quiz">
     <div class="email-header">
